데이터베이스 연결

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.9.1",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,6 +28,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "prisma": "^5.9.1",
     "typescript": "^5"
   }
 }
